kube-infra/k8s/ingress.yaml
#---
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
  #name: gitea-ingress
  #annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /$2
#spec:
  #ingressClassName: nginx
  #rules:
    #- http:
        #paths:
          #- path: /gitea(/|$)(.*)
            #pathType: Prefix
            #backend:
              #service:
                #name: gitea-svc
                #port:
                  #number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  annotations:
    # Disabling CSP temporarily to prevent frame errors
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Content-Security-Policy: ";
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
